<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Navigation -->
    <string name="header">User</string>
    <string name="app_name">Castillomax</string>
    <string name="owner">Owner</string>
    <string name="clear"></string>
    <string name="add">Add</string>
    <string name="delete">Delete</string>
    <string name="done">Done</string>
    <string name="discard">Discard</string>
    <string name="search">Search</string>
    <string name="update">Update</string>
    <string name="drawer_open">Open drawer navigation</string>
    <string name="drawer_close">Navigation drawer Close</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Content -->
    <string name="website_url"><a href="http://www.castillomax.com">Our Website</a></string>
    <string name="twitter_url"><a href="https://twitter.com/castillomax1">Our Twitter Feed</a></string>
    <string name="linkedin_url"><a href="https://www.linkedin.com/company/5385675">Our LinkedIn Page</a></string>
    <string name="maps_url"><a href="https://www.google.co.ve/maps/place/Castillomax+Oil+%26+Gas/@10.491196,-66.877526,17z/data=!3m1!4b1!4m2!3m1!1s0x8c2a58e0e63bf0a9:0xb58ad68105cdfe2">Our Locations</a></string>

    <string name="places_title">Places of Interest</string>
    <string name="example_place">Place 1</string>
    <string name="example_place_description">Description of Place 1</string>

    <string name="links_title">Relevant Links</string>
    <string name="example_link">Link Title</string>
    <string name="example_link_description">Link URL</string>

    <string name="phone_title">Relevant Phone Numbers</string>
    <string name="example_phone">Phone Owner</string>
    <string name="example_phone_number">Phone #</string>


    <string name="yourqueryfor">Your query for </string>
    <string name="returned"> returned </string>
    <string name="elements"> elements!</string>


</resources>